# OmnixBot

./: .gitignore  README.md  bot.py  config.py  defaults.ini  pyproject.toml  requirements.txt
cogs/persistence/: database.py  persistence.py
cogs/soundboard/: soundboard.py  utils.py
cogs/tts/: tts.py
